Migrate to a late binding values in the Makefile.  Remove swapfile creation (at vy's request).
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/jansson-2.5/Makefile.fds
+++ b/jansson-2.5/Makefile.fds
@@ -1,6 +1,5 @@
 topdir         := ..
-include $(topdir)/Makefile.cpus
-speedup        := -j $(parallel_build_count)
+speedup        = -j $(threads)
 user_build_dir := src test/bin
 
 include $(topdir)/Makefile.incl
