--- a/source/fds-probe/Makefile
+++ b/source/fds-probe/Makefile
@@ -1,6 +1,5 @@
 topdir         := ..
-include $(topdir)/Makefile.cpus
-speedup        := -j $(parallel_build_count)
+speedup        = -j $(threads)
 user_build_dir := common adapters block dataset s3 include
 
 include $(topdir)/Makefile.incl
