--- a/source/include/Makefile
+++ b/source/include/Makefile
@@ -1,7 +1,6 @@
 topdir         := ..
-include $(topdir)/Makefile.cpus
 user_target    := lib
-speedup        := -j $(parallel_build_count)
+speedup        = -j $(threads)
 user_rtime_env := user
 user_build_dir := \
     fdsp \
