--- a/source/lib/Makefile
+++ b/source/lib/Makefile
@@ -1,6 +1,5 @@
 topdir           := ..
-include $(topdir)/Makefile.cpus
-speedup          := -j $(parallel_build_count)
+speedup          = -j $(threads)
 user_build_dir   := blob net concurrency kvstore crypto native misc leveldb
 
 include $(topdir)/Makefile.incl
