--- a/source/net-service/Makefile
+++ b/source/net-service/Makefile
@@ -1,8 +1,7 @@
 topdir           := ..
-include $(topdir)/Makefile.cpus
 user_target      := lib
 user_rtime_env   := user
-speedup          := -j $(parallel_build_count)
+speedup          = -j $(threads)
 user_build_dir   := include endpoint svc_request
 user_incl_dir    :=
 
