--- a/source/access-mgr/Makefile
+++ b/source/access-mgr/Makefile
@@ -1,8 +1,7 @@
 topdir            := ..
-include $(topdir)/Makefile.cpus
 user_target       := exe
 user_rtime_env    := user
-speedup           := -j $(parallel_build_count)
+speedup           = -j $(threads)
 user_build_dir    := \
     include \
     amlib \
