--- a/source/access-mgr/stor-hvisor/Makefile
+++ b/source/access-mgr/stor-hvisor/Makefile
@@ -1,6 +1,5 @@
 topdir            := ../..
-include $(topdir)/Makefile.cpus
-speedup           := -j $(parallel_build_count)
+speedup           = -j $(threads)
 user_build_dir    := handler hvcore
 user_incl_dir     := ../include
 
