--- a/source/access-mgr/test/Makefile
+++ b/source/access-mgr/test/Makefile
@@ -1,9 +1,8 @@
 topdir            := ../../
-include $(topdir)/Makefile.cpus
 user_target       := test
 user_install_loc  := test
 user_rtime_env    := user
-speedup           := -j $(parallel_build_count)
+speedup           = -j $(threads)
 user_build_dir    :=
 
 user_incl_dir     := $(topdir) ../include ../stor-hvisor
