--- a/source/data-mgr/Makefile
+++ b/source/data-mgr/Makefile
@@ -1,8 +1,7 @@
 topdir            := ..
-include $(topdir)/Makefile.cpus
 user_target       := exe
 user_std_libs     := true
-speedup           := -j $(parallel_build_count)
+speedup           = -j $(threads)
 user_rtime_env    := user
 user_build_dir    := include dm-lib platform
 
