--- a/source/platform/Makefile
+++ b/source/platform/Makefile
@@ -1,9 +1,8 @@
 topdir           := ../
-include $(topdir)/Makefile.cpus
 user_std_libs    := true
 user_target      := exe
 user_rtime_env   := user
-speedup          := -j $(parallel_build_count)
+speedup          = -j $(threads)
 user_build_dir   := include shared common disk net-svc python
 
 user_incl_dir    := include ../net-service/include
