--- a/source/stor-mgr/Makefile
+++ b/source/stor-mgr/Makefile
@@ -1,9 +1,8 @@
 topdir            := ..
-include $(topdir)/Makefile.cpus
 user_target       := exe
 user_std_libs     := true
 user_rtime_env    := user
-speedup           := -j $(parallel_build_count)
+speedup           = -j $(threads)
 user_build_dir    := smlib policy include migrations platform
 
 # TODO: avoid include across components, put in include dir instead.
