--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -268,6 +268,8 @@ fds: {
             toggleStandAlone = false
             /* Toggle old or new processing path */
 	    toggleNewPath = true
+	    /* Forces all AM processor APIs to immediately return success */
+	    uturn_processor_all = false
 	    /* Forces all AM dispatcher APIs to immediately return success */
 	    uturn_dispatcher_all = false
 	    /* Test mode to bypass local catalog cache */
