fixed path in pkgrepo.conf and removed 'all' target, as it was breaking the associated script

--- a/source/tools/package/repo/pkgrepo.conf
+++ b/source/tools/package/repo/pkgrepo.conf
@@ -1,7 +1,7 @@
 
 [default]
-repodir = /home/fds/packages/package-repo
-architectures = amd64 i386 all
+repodir = /home/fds_files/packages/package-repo
+architectures = amd64 i386
 distname = fds
 branches = test
 
