WIN-1135 in-progress work to implement activity/events

--- a/source/config/etc/fds-features.conf
+++ b/source/config/etc/fds-features.conf
@@ -7,3 +7,5 @@ SNAPSHOT_ENDPOINT = true
 
 # The feature 'STATISTICS_ENDPOINT' is enabled.
 STATISTICS_ENDPOINT = true
+
+ACTIVITIES_ENDPOINT = true
