Replaced old calls to LOG with new calls. Disabling kv cache in SM if number of entries configured 0. Also, setting default total rate in AM qos to 200K -- this has no impact on whole domain bring up (OM sends this config to AM), only for standalone testing. Note that previous 20K iops on AM functional test was still due to old log calls (I checked), just a coincidence that it is also 20K. Once that bottleneck was removed, I found that standalone AM was throttling ;)

--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -18,6 +18,7 @@ fds:
         testing: {
             /* enable if testing SM standalone, no dependency on platform and OM */
             standalone = true
+            test_tier = false
         }
     }
     diskmap_ut:
