Revert "temporarily remove cache update for apt installs so as to avoid failing ..."

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -18,7 +18,7 @@
       shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
 
     - name: install os packages
-      apt: name={{item}} force=yes state=present 
+      apt: name={{item}} force=yes state=present update_cache=yes cache_valid_time=600
       with_items:
         - git
         - linux-generic
