added nodejs-legacy to devsetup

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -64,6 +64,7 @@
         - libconfig++-dev
         - oracle-java8-installer
         - npm
+        - nodejs-legacy
         - ruby
         - ruby-sass
         - python-paramiko
