initial attempt at converting static config files into jinja templates to be rendered by ansible
fixed some var names. created playbook to render configs from templates

moved static configs back to original location to preserve some semblance of original packaging behavior (for now). moved templates to their own directory. Experiment with building fds-systemconf deb with generated files instead of static

added localhost group to ansible inventory with appropriate variables for templated config generation

switch local playbooks to use localhost group instead of 127.0.0.1... minor difference, but seems more sane

removed (most) non-IP variables from config templates, as they introduce a new challenge in how best to organize said variables in the inventory (or elsewhere). will tackle this later

added generate-config-files target to pkg makefile

clean up ansible inventory. add fremont deploy configs that Aaron setup

convert formation.conf to template

fix default_nic setting in platform.conf template

cleaned up install_and_configure playbook to be more readable. Changed sources for config templates to point to common templates shared with packaging scripts

fixed up local-fds-nodes references to rid myself of typos. Fixed formation.conf.j2 to populate appropriate host IPs in the right places. Found a neat trick to select the appropriate IP from multiple networks by relying on fds_default_nic variable in inventory

find om_ip by relying on fds_default_nic variable in orch_mgr and platform templates

yank junk 'tester1' entry from ansible inventory

added formation.conf to clean target for packaging. Fixed templates to correctly default in the absense of fds_default_nic

fixed generated_configs directory to remain appropriately empty (and actually show up on clone and pull). Tweaked default values in orch_mgr and platform config templates to allow omission of either fds_default_nic or fds_om_host, or both, without going stupid. Commented out variables in inventory 

--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,8 @@ chef/nodes
 chef/vagrant/*/.vagrant/*
 source/java/${project.build.dir}
 source/test/.idea
+source/test/formation.conf
+source/config/etc/*.conf
 ansible/resources/*
 files_after_smoke_test
 files_after_starting_fds
