WIN-1221 Fix platform.conf

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -229,7 +229,7 @@ fds: {
         perf: {
             enable=true
         }
-        log_severity = "warn"
+        log_severity = "trace"
         logfile      = "am"
         om_ip        = "127.0.0.1"
         om_port      = 8904
@@ -266,13 +266,13 @@ fds: {
 	/* Internal testing related info */
 	testing: {
             /* Toggle stand alone mode */
-            toggleStandAlone = true
+            toggleStandAlone = false
             /* Toggle old or new processing path */
 	    toggleNewPath = true
 	    /* Forces all AM processor APIs to immediately return success */
 	    uturn_processor_all = false
 	    /* Forces all AM dispatcher APIs to immediately return success */
-	    uturn_dispatcher_all = true
+	    uturn_dispatcher_all = false
 	    /* Test mode to bypass local catalog cache */
 	    disable_vcc = true
 	    /* Forces all AM service APIs to immediately return success */
