Testing nbdblock via thrift for comparision with svc layer

--- a/source/unit-test/svc-layer/Makefile
+++ b/source/unit-test/svc-layer/Makefile
@@ -18,11 +18,6 @@ user_cc           := ngx_modules.c
 user_cpp          := \
     th_am.cpp \
     th_sm.cpp \
-    th_am_server.cpp \
-    svc_constants.cpp \
-    svc_types.cpp \
-    TestAMSvc.cpp \
-    TestSMSvc.cpp \
 	threadpool_test.cpp \
     serializer_gtest.cpp
 
@@ -35,16 +30,15 @@ user_bin_exe      := \
     serializer_gtest
 
 th_am := \
-    th_am.cpp \
-	svc_constants.cpp svc_types.cpp TestAMSvc.cpp TestSMSvc.cpp ngx_modules.c
+    th_am.cpp ngx_modules.c
 
 th_sm := \
     th_sm.cpp \
-    svc_constants.cpp svc_types.cpp TestAMSvc.cpp TestSMSvc.cpp ngx_modules.c
+    ngx_modules.c
 
-th_am_server := \
-    th_am_server.cpp \
-    svc_constants.cpp svc_types.cpp TestAMSvcSync.cpp ngx_modules.c
+#th_am_server := \
+#    th_am_server.cpp \
+#    ngx_modules.c
 
 threadpool_test := threadpool_test.cpp ngx_modules.c
 serializer_gtest := serializer_gtest.cpp ngx_modules.c
