--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -30,11 +30,18 @@
   </repositories>
 
   <dependencies>
+    <!-- JPA providers -->
     <dependency>
       <groupId>com.objectdb</groupId>
       <artifactId>objectdb</artifactId>
       <version>2.5.7_01</version>
     </dependency>
+    <dependency>
+      <groupId>org.batoo.jpa</groupId>
+      <artifactId>batoo-jpa</artifactId>
+      <version>2.0.1.2</version>
+    </dependency>
+
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
