--- a/source/tools/Makefile
+++ b/source/tools/Makefile
@@ -11,7 +11,8 @@ user_incl_dir     := \
 user_cpp_flags    := -DLEVELDB_PLATFORM_POSIX
 user_fds_so_libs  :=
 user_fds_ar_libs  := \
-    fds-dm-lib
+    fds-dm-lib \
+    fds-xdi
 
 user_non_fds_libs := \
     leveldb
