Making QoS threadpool parameters configurable

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -67,6 +67,13 @@ fds: {
             enable=true
         }
 
+        qos: {
+            /* Default qos threads */
+            default_qos_threads = 10
+            /* default max number of outstanding IO below qos control */
+            default_outstanding_io = 20
+        }
+
         catalog_write_buffer_size = 52428800
         catalog_cache_size = 16777216
         catalog_log_max_files = 5
@@ -98,6 +105,7 @@ fds: {
             port = 2003
             period = 5
         }
+
         threadpool: {
             max_task    = 10
             spawn_thres = 5
@@ -105,22 +113,23 @@ fds: {
             min_thread  = 8
             max_thread  = 10
         }
-    /* Internal testing related info */
-    testing: {
+
+        /* Internal testing related info */
+        testing: {
             /* General testing mode...should depricate */
             test_mode = false
 
-        /* Forces all DM APIs to immediately return success */
-        uturn_all = false
+            /* Forces all DM APIs to immediately return success */
+            uturn_all = false
 
-        /* Forces catalog update calls to immediately return success */
-        uturn_updatecat = false
+            /* Forces catalog update calls to immediately return success */
+            uturn_updatecat = false
 
-        /* Forces start tx calls to immediately return success */
-        uturn_starttx = false
+            /* Forces start tx calls to immediately return success */
+            uturn_starttx = false
 
-        /* Forces set metadata calls to immediately return success */
-        uturn_setmeta = false
+            /* Forces set metadata calls to immediately return success */
+            uturn_setmeta = false
 
             /* For testing firebreak on shorter timescale */
             test_firebreak = false
