--- a/source/lib/crypto/Makefile
+++ b/source/lib/crypto/Makefile
@@ -6,5 +6,6 @@ user_ar_libs     := fds-lib
 fds-lib          := $(user_cpp)
 
 user_no_style    :=
+user_incl_dir    := /usr/include/cryptopp
 
 include $(topdir)/Makefile.incl
