--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -10,7 +10,8 @@ user_incl_dir     := \
 	../include \
 	$(topdir)/stor-mgr/migrations \
 	$(topdir)/lib \
-	$(topdir)/persistent-layer/include
+	$(topdir)/persistent-layer/include \
+	/usr/include/cryptopp
 
 user_cpp_flags    := -DOBJCACHE_ENABLE
 user_cpp          :=                   \
