--- a/source/unit-test/fds-probe/stor-mgr-full/Makefile
+++ b/source/unit-test/fds-probe/stor-mgr-full/Makefile
@@ -8,7 +8,8 @@ user_incl_dir     := \
     $(local_topdir)/stor-mgr/include \
     $(local_topdir) \
     $(local_topdir)/stor-mgr/migrations \
-    $(local_topdir)/lib
+    $(local_topdir)/lib \
+		/usr/include/cryptopp
 
 user_cpp_flags    :=
 user_fds_so_libs  :=
