--- a/source/stor-mgr/Makefile
+++ b/source/stor-mgr/Makefile
@@ -12,7 +12,8 @@ user_incl_dir     := \
     include \
     migrations \
     $(topdir)/lib \
-    $(topdir)/persistent_layer/include
+    $(topdir)/persistent_layer/include \
+		/usr/include/cryptopp
 
 user_cpp_flags    :=
 user_fds_so_libs  :=
