--- a/source/stor-mgr/smlib/object-store/Makefile
+++ b/source/stor-mgr/smlib/object-store/Makefile
@@ -3,7 +3,7 @@ user_target       := lib
 user_rtime_env    := user
 user_build_dir    :=
 
-user_incl_dir     := $(topdir) ../../include
+user_incl_dir     := $(topdir) ../../include /usr/include/cryptopp
 user_cpp_flags    :=
 user_cpp          := $(wildcard *.cpp)
 
