--- a/source/unit-test/data-mgr/svc-test/Makefile
+++ b/source/unit-test/data-mgr/svc-test/Makefile
@@ -1,5 +1,5 @@
 test_topdir       := ../..
-user_incl_dir     := ..
+user_incl_dir     := .. /usr/include/cryptopp
 user_cpp_flags    :=
 user_fds_so_libs  :=
 user_fds_ar_libs  :=
