--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -6,7 +6,7 @@ fds: {
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
 
-    authentication=true
+    authentication=false
 
     ssl: {
         /* path relative to fds_root */
@@ -156,8 +156,10 @@ fds: {
         /* Log severity */
         log_severity = "trace"
 
-        /* verify data */
+        /* verify data on datapath */
         data_verify = true
+        /* verify data in background */
+        data_verify_background = true
 
         objectstore: {
             /* Size of the hashed task synchronizer */
