--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -78,6 +78,7 @@
         - fds-pkgtools
         - fds-systemdir
         - fds-coredump
+        - libcryptopp-dev
 
     - name: install pip packages
       pip: name={{item}} state=present 
