--- a/source/unit-test/fds-probe/am/Makefile
+++ b/source/unit-test/fds-probe/am/Makefile
@@ -3,7 +3,8 @@ source_dir        := $(probe_topdir)/../..
 user_incl_dir     := \
     $(source_dir)/access-mgr/stor-hvisor \
     $(source_dir)/access-mgr/include \
-    $(source_dir)/net-service/include
+    $(source_dir)/net-service/include \
+		/usr/include/cryptopp
 
 user_json         := in.json
 user_cpp_flags    :=
