added filechunkio module to devsetup

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -86,6 +86,7 @@
         - PyYAML
         - tabulate
         - xmlrunner
+        - filechunkio
 
     - name: create java home script
       copy: src=../files/jdk.sh dest=/etc/profile.d/jdk.sh owner=root group=root mode=0755
