Fixes to SM and SM obj store unit tests and toggle to disable stats streaming in AM for testing.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -278,6 +278,9 @@ fds: {
             /* Toggle stand alone mode */
             toggleStandAlone = false
 
+            /* Toggle to disable stats collection for metadata streaming */
+            toggleDisableStreamingStats = false
+
             /* NBD module driver */
             nbd_vol_module = "sm"
 
