--- a/source/config/etc/fds-features.conf
+++ b/source/config/etc/fds-features.conf
@@ -14,3 +14,5 @@ FIREBREAK = true
 # The feature 'ACTIVITIES' is enabled.
 ACTIVITIES_ENDPOINT = true
 
+# The feature 'FIREBREAK_EVENT' is enabled.
+FIREBREAK_EVENT = true
