demo buckets script to use 7777 calls so that volumes are registered

--- a/source/config/deprecated/demo.conf
+++ b/source/config/deprecated/demo.conf
@@ -1,6 +1,6 @@
 fds: {
     demo: {
-        web_dir="../lib/demo/"
+        web_dir="/home/nate/fds-src/source/Build/linux-x86_64.debug/lib/demo"
         webapp_port=8888
 
 	am_host = "localhost"
