--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -6,7 +6,7 @@ fds: {
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
 
-    authentication=true
+    authentication=false
 
     ssl: {
         /* path relative to fds_root */
@@ -132,7 +132,7 @@ fds: {
             uturn_setmeta = false
 
             /* For testing firebreak on shorter timescale */
-            test_firebreak = false
+            test_firebreak = true
             coarseslot_sec = 300
             coarse_slots = 6
             longslot_sec = 900
