Add lintian (in apt-get install list) to devsetup.

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -79,6 +79,7 @@
         - fds-systemdir
         - fds-coredump
         - libcryptopp-dev
+        - lintian
 
     - name: install pip packages
       pip: name={{item}} state=present 
