Fix to smchk so that it no longer relies on sm_ut.conf file.

--- a/source/checker/Makefile
+++ b/source/checker/Makefile
@@ -11,7 +11,6 @@ user_incl_dir     := \
     $(topdir)/access-mgr/include \
 	$(topdir)/lib \
     $(topdir)/am-app/include \
-	$(topdir)/lib \
 	$(topdir)/unit-test/stor-mgr
 
 user_cpp_flags    :=
@@ -38,6 +37,6 @@ user_cpp          := checker.cpp dm_checker.cpp smchk.cpp
 user_bin_exe      := checker dm_checker smchk
 checker		  := checker.cpp
 dm_checker    := dm_checker.cpp
-smchk         := smchk.cpp
+smchk         := smchk.cpp smchk_driver.cpp
 
 include $(topdir)/Makefile.incl
