--- a/ansible/playbooks/install_and_configure_fds.yml
+++ b/ansible/playbooks/install_and_configure_fds.yml
@@ -48,45 +48,19 @@
             group=root 
             mode=0644
 
-    -   name: render platform.conf
+    -   name: render /fds/etc config files
         template: 
-            src=../../source/config/etc/platform.conf.j2 
-            dest=/fds/etc/platform.conf 
+            src=../../source/config/etc/{{item}}.conf.j2 
+            dest=/fds/etc/{{item}}.conf 
             owner=root 
             group=root 
             mode=0644
-
-    -   name: render orch_mgr.conf
-        template: 
-            src=../../source/config/etc/orch_mgr.conf.j2 
-            dest=/fds/etc/orch_mgr.conf 
-            owner=root 
-            group=root 
-            mode=0644
-
-    -   name: render redis.conf
-        template:
-            src=../../source/config/etc/redis.conf.j2 
-            dest=/fds/etc/redis.conf 
-            owner=root 
-            group=root 
-            mode=0644
-
-    -   name: render fds.conf
-        template: 
-            src=../../source/config/etc/fds.conf.j2 
-            dest=/fds/etc/fds.conf 
-            owner=root 
-            group=root 
-            mode=0644
-
-    -   name: render fds-features.conf
-        template: 
-            src=../../source/config/etc/fds-features.conf.j2 
-            dest=/fds/etc/fds-features.conf 
-            owner=root 
-            group=root 
-            mode=0644
+        with_items:
+            - fds
+            - fds-features
+            - platform
+            - orch_mgr
+            - redis
 
     -   name: allow ssh root login
         command: sed -ie 's/PermitRootLogin without-password/PermitRootLogin yes/g' /etc/ssh/sshd_config
