Removing extraneous classes from TierEngine, no longer build old rank policies

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -21,7 +21,7 @@ user_cpp          :=                   \
     ObjRank.cpp                        \
     ObjStats.cpp                       \
     TierEngine.cpp                     \
-    TierPutAlgorithms.cpp              \
+#    TierPutAlgorithms.cpp              \
     ObjMeta.cpp                        \
     SmObjDb.cpp                        \
     SMSvcHandler.cpp
