--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -182,7 +182,12 @@
             <version>3.2</version>
         </dependency>
         <dependency>
-            <groupId>jfree</groupId>
+            <groupId>org.uncommons.maths</groupId>
+            <artifactId>uncommons-maths</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+        <groupId>jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.0.13</version>
         </dependency>
