Attempt to repair the routine linking crash during unit test compilation.
Signed-off-by: donavan nelson <donavan@formationds.com>

--- a/source/unit-test/fds-probe/thrift/Makefile
+++ b/source/unit-test/fds-probe/thrift/Makefile
@@ -35,6 +35,7 @@ local_probe_clnt  := \
 
 user_cpp          := $(local_probe_clnt)
 user_bin_exe      := thrift-probe
+.NOTPARALLEL: thrift-probe
 thrift-probe      := $(local_probe_clnt)
 
 include $(probe_topdir)/Makefile.s3
