[WIN-797] Write-back to HDD driven by SmTierMigration. SmTierMigration gtest.

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -20,6 +20,7 @@ user_cpp          :=                   \
     SmIo.cpp			               \
     ObjRank.cpp                        \
     ObjStats.cpp                       \
+    TierMigration.cpp                  \
     TierEngine.cpp                     \
     ObjMeta.cpp                        \
     SmObjDb.cpp                        \
