--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -14,7 +14,8 @@ user_cpp          := \
     sm_token_place_gtest.cpp \
     object_persist_data_gtest.cpp \
     sm_token_compactor_gtest.cpp \
-    sm_token_state_gtest.cpp
+    sm_token_state_gtest.cpp     \
+    sm_tier_migration_gtest.cpp
 
 user_no_style     :=
 
@@ -23,22 +24,24 @@ user_bin_exe      := \
     ObjectStoreLoadTest \
     sm_load_test        \
     metastore_unit_test \
-    smdiskmap_unit_test \
-    smtokenplace_gtest \
+    sm_diskmap_unit_test \
+    sm_tokenplace_gtest \
     sm_superblock_gtest \
     obj_persist_gtest \
-    smtokcompactor_gtest \
-    smtoken_state_gtest
+    sm_tokcompactor_gtest \
+    sm_token_state_gtest  \
+    sm_tier_migration_gtest
 
 sm_objectstore_gtest   := object_store_unit_test.cpp
 ObjectStoreLoadTest := object_store_load_test.cpp
 metastore_unit_test := metastore_unit_test.cpp
-smdiskmap_unit_test := sm_disk_map_test.cpp
-smtokenplace_gtest  := sm_token_place_gtest.cpp
+sm_diskmap_unit_test := sm_disk_map_test.cpp
+sm_tokenplace_gtest  := sm_token_place_gtest.cpp
 sm_load_test        := sm_load_test.cpp
 sm_superblock_gtest := sm_superblock_gtest.cpp
 obj_persist_gtest   := object_persist_data_gtest.cpp
-smtokcompactor_gtest := sm_token_compactor_gtest.cpp
-smtoken_state_gtest  := sm_token_state_gtest.cpp
+sm_tokcompactor_gtest := sm_token_compactor_gtest.cpp
+sm_token_state_gtest  := sm_token_state_gtest.cpp
+sm_tier_migration_gtest := sm_tier_migration_gtest.cpp
 
 include $(test_topdir)/Makefile.sm
