--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -3,7 +3,7 @@ user_build_dir    := svc-test
 user_incl_dir     := /usr/include/cryptopp
 user_cpp_flags    :=
 user_fds_so_libs  :=
-user_fds_ar_libs  :=
+user_fds_ar_libs  := smchk
 
 user_cpp          := \
     object_store_unit_test.cpp \
