--- a/source/unit-test/stor-mgr/svc-test/Makefile
+++ b/source/unit-test/stor-mgr/svc-test/Makefile
@@ -12,10 +12,12 @@ user_no_style     :=
 user_bin_exe      := \
     smapi_gtest \
     smperf_gtest \
+    slsmperf_gtest \
     svc_gtest
 
 smapi_gtest       := smapi_gtest.cpp ngx_modules.c
 smperf_gtest     := smperf_gtest.cpp ngx_modules.c
+slsmperf_gtest     := slsmperf_gtest.cpp ngx_modules.c
 svc_gtest     := svc_gtest.cpp ngx_modules.c
 
 
