--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -261,7 +261,7 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-<!--             <plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2</version>
@@ -282,7 +282,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin> -->
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
