--- a/source/unit-test/data-mgr/svc-test/Makefile
+++ b/source/unit-test/data-mgr/svc-test/Makefile
@@ -7,12 +7,15 @@ user_fds_ar_libs  :=
 user_hh           := $(wildcard *.h)
 user_cc           := ngx_modules.c
 user_cpp          := \
-    dm_mod_gtest.cpp
+    dm_mod_gtest.cpp  \
+    sldmperf_gtest.cpp
 
 user_no_style     :=
 user_bin_exe      := \
-    dm_mod_gtest
+    dm_mod_gtest     \
+    sldmperf_gtest
 
 dm_mod_gtest      := dm_mod_gtest.cpp ngx_modules.c
+sldmperf_gtest    := sldmperf_gtest.cpp ngx_modules.c
 
 include $(test_topdir)/Makefile.svc
