force version 0.3.2 of fds-pkgtools to ensure proper versioning of FDS packages

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -75,7 +75,7 @@
         - python-thrift
         - fds-pkghelper
         - fds-pkg
-        - fds-pkgtools
+        - fds-pkgtools=0.3.2
         - fds-systemdir
         - fds-coredump
         - libcryptopp-dev
