smartify packaging Makefile to allow Jenkins to build versioned .debs easily

--- a/source/tools/install/pkg/Makefile
+++ b/source/tools/install/pkg/Makefile
@@ -10,7 +10,11 @@ clean:
 	@sudo rm -f ../../../config/etc/*.conf ../../../test/formation.conf
 
 package: 
-	@sudo fdspkgcreate -r
+	@if [ "x${release-build}" = "xfalse" ]; then \
+		fdspkgcreate ; \
+	else \
+		sudo fdspkgcreate -r ; \
+	fi
 
 # -----------------------------------------------------------------------------
 # Keep track of where all relevant ansible files live
