added clarifying commentary in Makefile - release-build conditional's purpose was not immediately clear

--- a/source/tools/install/pkg/Makefile
+++ b/source/tools/install/pkg/Makefile
@@ -10,6 +10,12 @@ clean:
 	@sudo rm -f ../../../config/etc/*.conf ../../../test/formation.conf
 
 package: 
+	# If you don't want to build a "release" version of the packages, then run:
+	#  make release-build=false
+	#  to get Jenkins-versioned (x.y.z-buildnumber) or timestamped packages
+	#  depending on the context
+	#  Otherwise, defaults to old behavior of assuming you want
+	#  "release" package versioning (x.y.z)
 	@if [ "x${release-build}" = "xfalse" ]; then \
 		fdspkgcreate ; \
 	else \
