Add ar wrapper script that prevents ar from running in parallel.
Remove .NOPARALLEL marker from data-mgr/dm-lib

Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/data-mgr/dm-lib/Makefile
+++ b/source/data-mgr/dm-lib/Makefile
@@ -18,7 +18,7 @@ user_cpp          := \
         StatStreamAggregator.cpp
 
 user_ar_libs      := fds-dm-lib
-.NOTPARALLEL: fds-dm-lib
+#.NOTPARALLEL: fds-dm-lib
 fds-dm-lib        := $(user_cpp)
 
 include $(topdir)/Makefile.incl
