--- a/source/Makefile
+++ b/source/Makefile
@@ -24,9 +24,9 @@ user_build_dir :=                       \
     stor-mgr                            \
     tools                               \
     testlib                             \
-    java                                \
     unit-test                           \
-    checker                             
+    checker                             \
+    java
 
 ifdef SKIP_JAVA_BUILD
 	user_build_dir := $(filter-out java, $(user_build_dir))
