Add swig3.0 to the devsetup packages.
Package was added to the FDS repo on coke prior to this change.

Signed-off-by: donavan nelson <donavan@formationds.com>

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -100,6 +100,7 @@
         - lintian
         - libhiredis0.10
         - libhiredis-dev
+        - swig3.0
 
     - name: install pip packages
       pip: name={{item}} state=present
