AM: Remove Native API.

--- a/source/access-mgr/stor-hvisor/Makefile
+++ b/source/access-mgr/stor-hvisor/Makefile
@@ -1,6 +1,6 @@
 topdir            := ../..
 speedup           = -j $(threads)
-user_build_dir    := handler hvcore
+user_build_dir    := hvcore
 user_incl_dir     := ../include
 
 include $(topdir)/Makefile.incl
